feat: add clear preview button to reset form and filter

--- a/public/popup.html
+++ b/public/popup.html
@@ -66,7 +66,10 @@
             <label for="subdomains-checkbox">Include subdomains</label>
           </div>
 
-          <button type="submit" class="primary-btn">Add Domain</button>
+          <div class="form-actions">
+            <button type="submit" class="primary-btn">Add Domain</button>
+            <button type="button" id="clear-preview-btn" class="secondary-btn">Clear Preview</button>
+          </div>
         </form>
       </section>
 
